<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="en">

    <string name="app_name">My Ministry Assistant</string>
    <string name="no_householders">No Householders</string>
    <string name="no_publishers">No Publishers</string>
    <string name="no_publications">No publications to display</string>
    <string name="total_time">Total Time</string>
    <string name="zero_entries">No Recorded Time</string>
    <string name="last_visited_on">Last visited on {date}</string>
    <string name="last_active_on">Last active on {date}</string>
    <string name="last_placed_on">Last placed on {date}</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="no_activity">No Activity</string>
    <string name="inactive">Inactive</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="no_backups">No Backups</string>
    <string name="activity_for_publication">{count} placed during {service}</string>
    <string name="activity_for_publication_with_householder">{count} placed with {householder} during {service}</string>
    <string name="activity_for_householder">Visited during {service}</string>
    <string name="activity_date_by_publisher">{date} by {publisher}</string>
    <string name="month_next">Next Month</string>
    <string name="month_previous">Previous Month</string>
    <string name="updating_app">Updating Application\nPlease be patient#8230;</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="please_be_patient">Please be patient…</string>
    <string name="service_year">Service Year</string>
    <string name="navdrawer_item_select_publisher">Select a Publisher</string>
    <string name="navdrawer_item_summary">Summary</string>
    <string name="navdrawer_item_publications">Publications</string>
    <string name="navdrawer_item_householders">Householders</string>
    <string name="navdrawer_item_publishers">Publishers</string>
    <string name="navdrawer_item_entry_types">Entry Types</string>
    <string name="navdrawer_item_backups">Backups</string>
    <string name="navdrawer_item_settings">Settings</string>
    <string name="navdrawer_item_help">Help</string>
    <string name="navdrawer_item_time_entry">Time Entry</string>
    <string name="title_householder_edit">Householder Edit</string>
    <string name="title_publisher_edit">Publisher Edit</string>
    <string name="title_publication_edit">Publication Edit</string>
    <string name="tab_item_monthly">Monthly</string>
    <string name="tab_item_yearly">Yearly</string>
    <string name="tab_item_publications">@string/navdrawer_item_publications</string>
    <string name="tab_item_publication_types">@string/form_publication_types</string>
    <string name="tab_item_householders">@string/navdrawer_item_householders</string>
    <string name="tab_item_publishers">@string/navdrawer_item_publishers</string>
    <string name="tab_item_entry_types">@string/navdrawer_item_entry_types</string>
    <string name="tab_item_backups">@string/navdrawer_item_backups</string>
    <string name="tab_item_schedule_backups">@string/menu_schedule_backups</string>
    <string name="default_rollover_time">Rollover Time</string>
    <string name="default_bible_study">Bible Study</string>
    <string name="default_return_visit">Return Visit</string>
    <string name="default_ministry_service">Ministry Service</string>
    <string name="default_rebuild_committee">Rebuild Committee</string>
    <string name="default_books">Books</string>
    <string name="default_booklets">Booklets &amp; Brochures</string>
    <string name="default_magazines">Magazines</string>
    <string name="default_media">Media</string>
    <string name="default_tracts">Tracts</string>
    <string name="default_pioneering">Regular Pioneering</string>
    <string name="default_pioneering_aux">Auxiliary Pioneering</string>
    <string name="default_pioneering_aux_special">Special Auxiliary Pioneering</string>
    <string name="form_name">Name</string>
    <string name="form_rename">Rename</string>
    <string name="form_publisher">Publisher</string>
    <string name="form_type">Type</string>
    <string name="form_publication_type">Publication Type</string>
    <string name="form_publication_types">Publication Types</string>
    <string name="form_entry_type">Entry Type</string>
    <string name="form_notes">Notes</string>
    <string name="form_start">Start</string>
    <string name="form_end">End</string>
    <string name="form_is_active">Is Active</string>
    <string name="form_is_inactive">Is Inactive</string>
    <string name="form_is_pair">Is a Pair</string>
    <string name="form_address">Address</string>
    <string name="form_phone_mobile">Mobile Phone</string>
    <string name="form_phone_home">Home Phone</string>
    <string name="form_phone_work">Work Phone</string>
    <string name="form_phone_other">Other Phone</string>
    <string name="form_daily_backups">Daily Backups</string>
    <string name="form_weekly_backups">Weekly Backups</string>
    <string name="menu_add_new">Add New</string>
    <string name="menu_add_new_with_plus">+ Add new</string>
    <string name="menu_add_new_publisher">+ Add new publisher</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_done">Done</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_entries">Entries</string>
    <string name="menu_no_householder">No Householder</string>
    <string name="menu_no_publications">No Publications</string>
    <string name="menu_rv_publications_notes">Return Visits, Publications, and Notes</string>
    <string name="menu_options">Options</string>
    <string name="menu_change_log">Change Log</string>
    <string name="menu_transfer_to">Transfer to</string>
    <string name="menu_schedule_backups">Schedule Backups</string>
    <string name="menu_more">More</string>
    <string name="menu_count_as_return_visit">Count as a return visit</string>
    <string name="menu_do_not_count_as_return_visit">Do not count as a return visit</string>
    <string name="menu_sort">Sorting</string>
    <string name="menu_sort_alpha_asc">Sort by name</string>
    <string name="menu_sort_alpha_desc">Sort by name reversed</string>
    <string name="menu_sort_most_used">Sort by most used</string>
    <string name="menu_sort_most_placed">Sort by most placed</string>
    <string name="menu_sort_last_visit">Sort by last visit date</string>
    <string name="menu_sort_last_visit_reversed">Sort by last visit date reversed</string>
    <string name="menu_send_report">Send Report</string>
    <string name="menu_add_time">Add Time</string>
    <string name="pref_update_title">Check for an Update</string>
    <string name="pref_update_summary">Check the website to see if there is an update available. This is used for phones or tablets that do not have the market available.</string>
    <string name="pref_backup_title">Backup database</string>
    <string name="pref_backup_summary">Tap to create a backup of the database on external storage.</string>
    <string name="pref_restore_title">Restore database</string>
    <string name="pref_restore_dialog">Database restore</string>
    <string name="pref_clear_title">Clear old backups</string>
    <string name="pref_clear_summary">Remove all backup databases except the most recently created.</string>
    <string name="pref_schedule_summary">Schedule daily or weekly automatic backups.</string>
    <string name="pref_donate_title">Donate</string>
    <string name="pref_feedback_cat">Contact the Developer</string>
    <string name="pref_bugs_title">Bug Submission</string>
    <string name="pref_features_title">Feature Request</string>
    <string name="pref_translations_title">Translation Request</string>
    <string name="pref_about_licenses">Open source licenses</string>
    <string name="pref_version">Version</string>
    <string name="pref_version_summary">Thank you for downloading. Enjoy!</string>
    <string name="pref_rollover_summary">Calculate rollover time.</string>
    <string name="pref_show_minutes_title">Minutes in Summary</string>
    <string name="pref_show_minutes_summary">Show the minutes each month. Unchecked shows whole hours.</string>
    <string name="pref_recalc_ro_time">Recalculate Rollover Time</string>
    <string name="toast_export_text">Database backed up successfully.</string>
    <string name="toast_export_text_error">Could not backup database.</string>
    <string name="toast_import_text">Backup restored successfully.</string>
    <string name="toast_import_text_error">Could not import database.</string>
    <string name="toast_cleaned_backups">Backups have been cleaned.</string>
    <string name="toast_cleaned_backups_only_one">There are not enough backups to complete this request.</string>
    <string name="toast_cleaned_backups_error">There was an error trying to clean up your backups.</string>
    <string name="toast_saved">Saved.</string>
    <string name="toast_saved_problem">Problem during save.</string>
    <string name="toast_saved_with_space">Saved {name}.</string>
    <string name="toast_saved_problem_with_space">Problem saving {name}.</string>
    <string name="toast_created">Created.</string>
    <string name="toast_created_problem">Problem during create.</string>
    <string name="toast_created_with_space">Created {name}.</string>
    <string name="toast_created_problem_with_space">Problem creating {name}.</string>
    <string name="toast_provide_name">Please provide a name.</string>
    <string name="toast_cannot_modify_rollover_time">Cannot modify rollover entries.</string>
    <string name="toast_deleted">Deleted.</string>
    <string name="toast_deleted_with_space">Deleted {name}.</string>
    <string name="toast_daily_backup_scheduled">Daily backups scheduled for {time}.</string>
    <string name="toast_daily_backup_cancelled">Daily backups cancelled.</string>
    <string name="toast_weekly_backup_scheduled">Weekly backups scheduled for {weekday} at {time}.</string>
    <string name="toast_weekly_backup_cancelled">Weekly backups cancelled.</string>
    <string name="toast_db_updated_successfully">Database updated successfully.</string>
    <string name="toast_update_done">Update done.</string>
    <string name="note_rollover_edit">****************\nNote: This is a unique entry type to manage rollover time. You cannot make it active. Do not manually create a rollover entry type as this will be used to do any automatic calculations.\n****************</string>

</resources>