<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/manage_new"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="10"
        android:title="@string/menu_add_new"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/sort_container"
        android:icon="@drawable/ic_action_sort_by_size"
        android:orderInCategory="10"
        android:title="@string/menu_sort"
        app:showAsAction="always|withText">
        <menu>
            <item
                android:id="@+id/sort_alpha"
                android:orderInCategory="10"
                android:title="@string/menu_sort_alpha_asc"
                app:showAsAction="always"/>
            <item
                android:id="@+id/sort_alpha_desc"
                android:orderInCategory="20"
                android:title="@string/menu_sort_alpha_desc"
                app:showAsAction="always"/>
            <item
                android:id="@+id/sort_most_used"
                android:orderInCategory="30"
                android:title="@string/menu_sort_most_used"
                app:showAsAction="always"/>
        </menu>
    </item>

</menu>