<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/material_corner_radius" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding" >

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_name"
                android:inputType="textCapSentences"
                android:paddingTop="@dimen/default_padding_half" />

            <CheckBox
                android:id="@+id/cb_is_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/default_padding_half"
                android:paddingTop="@dimen/default_padding_half"
                android:text="@string/form_is_active"
                android:textColor="@color/holo_grey_light" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/recent_activity_text"
        style="?android:attr/spinnerItemStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/default_padding_half"
        android:paddingTop="@dimen/default_padding_half"
        android:text="@string/recent_activity" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/inner_padding" />

    <android.support.v7.widget.CardView
        android:id="@id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="@dimen/material_corner_radius" >

        <TextView
            style="@style/empty_list_text_settings"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/thumb_height"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:text="@string/no_activity" />
    </android.support.v7.widget.CardView>

</LinearLayout>